--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>帮助文档</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -21,6 +21,7 @@
       subMaxLevel: 2,
       coverpage: true,
       loadNavbar: true,
+      onlyCover: false,
     }
   </script>
   <!-- Docsify v4 -->
